# pmtile-tool

./: .dockerignore  .gitignore  .releaserc.json  Cargo.toml  Dockerfile  README.md  build.rs  config.docker.yaml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
assets/: geofabrik-index-v1.json
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/scripts/: fetch-basemap-sprites.sh  verify-flow.mjs  verify-ui.mjs
frontend/src/: App.vue  format.ts  main.ts  style.css
frontend/src/__tests__/: format.spec.ts
frontend/src/api/: HttpPmtilesApi.ts  MockPmtilesApi.ts  PmtilesApi.ts  index.ts  types.ts
frontend/src/api/__tests__/: mock.spec.ts
frontend/src/components/: ExportPanel.vue  JobsPanel.vue  RegionDetailCard.vue  RegionTreeItem.vue  RegionsPanel.vue  StyleEditor.vue  StylePicker.vue
frontend/src/map/: controller.ts  flavours.ts  styleExport.ts
frontend/src/stores/: jobs.ts  regions.ts  styles.ts
frontend/tests/: export.spec.ts  helpers.ts  mobile.spec.ts  preview.spec.ts  regions.spec.ts  styles.spec.ts
migrations/: 0001_init.sql  0002_job_name.sql
scripts/: dev-data.sh  sync-ui.sh
src/: config.rs  disk.rs  error.rs  lib.rs  main.rs  martin_embed.rs  state.rs
src/extract/: estimate.rs  go_pmtiles.rs  mod.rs  validate.rs
src/jobs/: cleanup.rs  engine.rs  mod.rs  runner.rs  store.rs
src/regions/: loader.rs  mod.rs
src/rest/: doc.rs  download.rs  exports.rs  mod.rs  rate_limit.rs  regions.rs  status.rs  ui.rs  views.rs
tests/: e2e_extract.rs  martin_smoke.rs
tests/fixtures/: tiny.pmtiles
(+5 files in other folders)
