[package]
name = "pmtile-tool"
version = "1.2.1"
edition = "2024"
rust-version = "1.94"
description = "Create and download PMTiles basemap extracts"
publish = false

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false }
geo = "0.33.1"
geojson = "1.0.0"
martin-embedded = { git = "https://github.com/sam-ruff/martin", branch = "main", version = "0.1.0", default-features = false, features = ["pmtiles"] }
mime_guess = "2.0.5"
nix = { version = "0.31.3", features = ["fs"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
mockall = "0.15.0"
tempfile = "3.27.0"
